# phd-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  DEVGUIDE.md  FILE_MANIFEST.md  INSTALLATION.md  LICENSE  Makefile  PROJECT_COMPLETION_CHECKLIST.md  PROJECT_SUMMARY.md  PROMPT.md  QUICKSTART.md  README.md  SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_simulation.py  setup.py  setup_linux.sh  setup_windows.bat
.github/workflows/: ci.yml
Sphinx/: conf.py  index.rst  modules.rst
config/: example_config.yml
data/: acetylene_properties.csv
data/configs/: acetylene_run.yaml
data/mechanisms/: README.md
docs/: conf.py  index.rst  sources.rst  usage.rst
examples/: example_basic_simulation.py  example_gillespie_simulation.py  soot_formation.yaml
refs/: acetylene.txt  acetylene_notes.md  pbe.txt  soot.txt  soot_notes.md  sources.md
schema/: config_schema.json
scripts/: convert_output.py  prepare_output_dir.py  run_batch.py  run_simulation.py  show_config.py  validate_input.py
src/: __init__.py  chemistry.py  events.py  gas_phase_solver.py  input_schema.yaml  io.py  io_handler.py  particle_balance_model.py  particle_system.py  particles.py  population_balance.py  simulation.py  utilities.py
src/nanoparticle_simulator/: __init__.py  cli.py  version.py
src/nanoparticle_simulator/chemistry/: __init__.py  gas_phase.py  mechanism.py  species.py
src/nanoparticle_simulator/io/: __init__.py  config.py  output.py
src/nanoparticle_simulator/particles/: __init__.py  ensemble.py  particle.py  processes.py  stochastic_solver.py
src/nanoparticle_simulator/reactor/: __init__.py  base.py  batch.py  ode_solver.py  splitting.py
src/nanoparticle_simulator/utils/: __init__.py  constants.py  logging_config.py  units.py
src/phdai/: __init__.py  chemistry.py  particles.py  run.py
src/sootsim/: __init__.py  chemistry.py  cli.py  io.py  population.py  simulation.py
tests/: conftest.py  test_chemistry.py  test_e2e.py  test_gas_phase_solver.py  test_io.py  test_particle_balance_model.py  test_particle_system.py  test_particles.py  test_population.py  test_population_balance.py  test_scripts.py  test_simulation.py  test_utilities.py
tests/e2e/: test_simulation.py
tests/integration/: test_reactor.py  test_stochastic.py
tests/unit/: __init__.py  test_ensemble.py  test_gas_phase.py  test_io.py  test_particle.py  test_processes.py  test_species.py  test_utils.py
