[project]
name = "phd-ai-simulation"
version = "0.1.0"
description = "Rebuild of soot and carbon nanotube simulation legacy code using modern Python tooling."
readme = "README.md"
authors = [ {name = "msc elnik"} ]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.27",
    "scipy>=1.12",
    "pyyaml>=6.0",
]
optional-dependencies = { dev = ["pytest>=8.3","black>=24.8","ruff>=0.0.298","isort>=6.0","sphinx>=7.0","pre-commit>=3.4"] }

[project.scripts]
sootsim = "sootsim.cli:main"

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E","F","W","C","B","S"]
